css/index.css
:root {
    --hatcherblue: #6290C0;
    --hatcherred: #86335E;
    --hatcherdarkblue: #0067A5;
}


html {
    background-color: #f5f5f5;
}


body {
    margin: 0;
    overflow-y: scroll;
    overflow-x: hidden;
    padding-bottom: 5em;
}


body.inactive {
    overflow-y: hidden;
}


header {
    display: flex;
    justify-content: space-between;
    align-content: center;

    flex-shrink: 0;

    border-style: double;
    border-color: var(--hatcherblue);
    border-width: 5px;

    padding: 1px 1px 1px 1px;
    height: 74px;
    margin-bottom: 0.25em;
}


#page-title {
    /* TODO Figure out what the heck vw and rem mean... */
    font-size: clamp(0.75rem, 4vw, 3rem);
    font-family: 'Times New Roman', Times, serif;
    color: var(--hatcherdarkblue);
    -webkit-text-stroke: 1px black;
    text-align: center;
    margin: auto;
}


.kirby-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    padding: 0;
    max-width: 98px;
}


#kirby-container-left {
    align-self: left;
}


#kirby-container-right {
    align-self: right;
}


.kirby-img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    max-width: auto;
    max-height: auto;
    margin: 0;
    padding: 0;
}

#btn-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#nav-btn-container {
    margin-left: 0.15em;
    display: block;
    flex-direction: row;
    justify-content: flex-start;
    column-gap: 0.25em;
}


.nav-menu {
    position: fixed;
    height: auto;
    width: 275px;
    left: -275px;
    z-index: 1000;
    transition: left 0.5s ease 0.2s;
    /* closing transition */
    /* opening transition */
    /* property name | duration | transition function | delay*/
}


.nav-menu.active {
    left: 0px;
}


#nav-btn {
    display: flex;
    justify-content: space-around;
    flex-direction: column;
    cursor: pointer;
    padding: 10px;
    background-color: whitesmoke;
    border: none;
}


.bar {
    display: block;
    width: 30px;
    height: 3px;
    background-color: #333;
    /* color of the lines */
    margin: 4px 0;
    /* vertical spacing between lines */
}

#git-dm-btn-container {
    position: relative;
    float: inline-end;
}

#github-link {
    width: fit-content;
    height: fit-content;
}

#github-img {
    padding-right: 10px;
    height: 32px;
    width: 32px;
    display: block;
}

.mm-listview {
    display: flex;
    flex-direction: column;
    row-gap: 1em;
    list-style-type: none;
    padding-left: 0.5em;
}


.mm-listview li {
    transition: all 0.2 ease-in-out;
    border-radius: 5px;
}


.mm-listview li:hover {
    color: #6290C000;
    box-shadow: 0 5px 5px lightgray;
}


.mm-link {
    display: flex;
    flex-direction: column;
    padding-left: 0.25em;
    text-decoration: none;
    color: var(--hatcherblue);
}


.mm-link-text {
    font-weight: bold;
}


#content {
    position: relative;
    padding: 5px 25px 5px 25px;

    /* center */
    margin: auto;
    width: 100%;
    max-width: 1000px;
}

.content-slideout {
    left: 0px;
    transition: left 0.5s ease 0.2s;
}


.content-slideout.active {
    left: 250px;
}

